--- a/index.html
+++ b/index.html
@@ -1812,7 +1812,7 @@ MODE INSOLENCE : ACTIVÉ. Un AI sans limit by Ego.`;
                 await loadChats();
             } catch (error) {
                 console.error("Error in sendMessage:", error);
-                addMessageToUI('ai', "Sorry, I encountered an error. Please try again.");
+                addMessageToUI('ai', "Sorry, I encountered an error. Please, add API KEY on config.js or change API KEY");
             }
         }
 
